# approximate

./: .gitignore  .hlint.yaml  .travis.yml  AUTHORS.markdown  CHANGELOG.markdown  HLint.hs  README.markdown  approximate.cabal  cabal.haskell-ci  cabal.project
.github/workflows/: haskell-ci.yml
src/Data/: Approximate.hs
src/Data/Approximate/: Mass.hs  Numerics.hs  Type.hs
