name:          approximate
category:      Numeric
version:       0.2.1
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/analytics/approximate/
bug-reports:   http://github.com/analytics/approximate/issues
copyright:     Copyright (C) 2013 Edward A. Kmett
build-type:    Custom
tested-with:   GHC == 7.4.1, GHC == 7.6.1
synopsis:      Approximate discrete values and numbers
description:   This package provides approximate discrete values and numbers.

extra-source-files:
  .travis.yml
  .ghci
  .gitignore
  .vim.custom
  travis/cabal-apt-install
  travis/config
  AUTHORS.markdown
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/analytics/approximate.git

-- You can disable the doctests test suite with -f-test-doctests
flag test-doctests
  default: True
  manual: True

flag lib-Werror
  default: False
  manual: True

library
  build-depends:
    base                      >= 4.3      && < 5,
    binary                    >= 0.5      && < 0.8,
    bytes                     >= 0.7      && < 1,
    cereal                    >= 0.3.5    && < 0.4,
    comonad                   >= 3        && < 5,
    deepseq                   >= 1.3      && < 1.5,
    distributive              >= 0.3      && < 1,
    generic-deriving          >= 1.4      && < 1.7,
    ghc-prim,
    hashable                  >= 1.1.2.3  && < 1.3,
    hashable-extras           >= 0.1      && < 1,
    lens                      >= 3.9      && < 5,
    log-domain,
    pointed                   >= 3        && < 5,
    semigroupoids             >= 3.0.2    && < 5,
    semigroups                >= 0.8.4    && < 1,
    safecopy                  >= 0.8.1    && < 0.9,
    vector                    >= 0.9      && < 0.11

  exposed-modules:
    Data.Approximate
    Data.Approximate.Type
    Data.Approximate.Mass
    Data.Approximate.Numerics

  if flag(lib-Werror)
    ghc-options: -Werror


  c-sources: cbits/fast.c
  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src

test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base,
      directory      >= 1.0,
      doctest        >= 0.9.1,
      filepath,
      generic-deriving,
      semigroups     >= 0.9,
      simple-reflect >= 0.3.1

  if impl(ghc<7.6.1)
    ghc-options: -Werror
