name:          approximate
category:      Numeric
version:       0.3.2
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/analytics/approximate/
bug-reports:   http://github.com/analytics/approximate/issues
copyright:     Copyright (C) 2013 Edward A. Kmett
build-type:    Custom
tested-with:   GHC == 7.4.2
             , GHC == 7.6.3
             , GHC == 7.8.4
             , GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.1
synopsis:      Approximate discrete values and numbers
description:   This package provides approximate discrete values and numbers.

extra-source-files:
  .travis.yml
  .ghci
  .gitignore
  .vim.custom
  travis/cabal-apt-install
  travis/config
  AUTHORS.markdown
  README.markdown
  CHANGELOG.markdown
  HLint.hs
  Warning.hs

custom-setup
  setup-depends:
    base          >= 4.3 && <5,
    Cabal         >= 1.10,
    cabal-doctest >= 1 && <1.1

source-repository head
  type: git
  location: git://github.com/analytics/approximate.git

-- You can disable the doctests test suite with -f-test-doctests
flag test-doctests
  default: True
  manual: True

flag herbie
  default: False
  manual: True

library
  build-depends:
    base                      >= 4.3      && < 5,
    binary                    >= 0.5      && < 0.9,
    bytes                     >= 0.7      && < 1,
    cereal                    >= 0.3.5    && < 0.6,
    comonad                   >= 3        && < 6,
    deepseq                   >= 1.3      && < 1.5,
    ghc-prim,
    hashable                  >= 1.2.5    && < 1.4,
    lens                      >= 3.9      && < 5,
    log-domain,
    pointed                   >= 3        && < 6,
    semigroupoids             >= 3.0.2    && < 6,
    semigroups                >= 0.8.4    && < 1,
    safecopy                  >= 0.8.1    && < 0.11,
    vector                    >= 0.9      && < 0.13

  if flag(herbie)
    build-depends: HerbiePlugin >= 0.1 && < 0.2
    cpp-options: -DHERBIE
    ghc-options: -fplugin=Herbie

  exposed-modules:
    Data.Approximate
    Data.Approximate.Type
    Data.Approximate.Mass
    Data.Approximate.Numerics

  if impl(ghc >= 7.4 && < 7.6)
    build-depends: ghc-prim

  c-sources: cbits/fast.c
  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src

test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      approximate,
      base,
      directory      >= 1.0,
      doctest        >= 0.9.1,
      filepath,
      semigroups     >= 0.9,
      simple-reflect >= 0.3.1
