name:          approximate
category:      Numeric
version:       0.3.4
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/analytics/approximate/
bug-reports:   http://github.com/analytics/approximate/issues
copyright:     Copyright (C) 2013 Edward A. Kmett
build-type:    Simple
tested-with:   GHC == 7.4.2
             , GHC == 7.6.3
             , GHC == 7.8.4
             , GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.3
             , GHC == 8.10.1
synopsis:      Approximate discrete values and numbers
description:   This package provides approximate discrete values and numbers.

extra-source-files:
  .ghci
  .gitignore
  .hlint.yaml
  .vim.custom
  AUTHORS.markdown
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/analytics/approximate.git

flag herbie
  default: False
  manual: True

library
  build-depends:
    base                      >= 4.3      && < 5,
    binary                    >= 0.5      && < 0.9,
    bytes                     >= 0.7      && < 1,
    cereal                    >= 0.3.5    && < 0.6,
    comonad                   >= 3        && < 6,
    deepseq                   >= 1.3      && < 1.5,
    ghc-prim,
    hashable                  >= 1.2.5    && < 1.4,
    lens                      >= 3.9      && < 6,
    log-domain,
    pointed                   >= 3        && < 6,
    semigroupoids             >= 3.0.2    && < 6,
    semigroups                >= 0.8.4    && < 1,
    safecopy                  >= 0.8.1    && < 0.11,
    vector                    >= 0.9      && < 0.13

  if flag(herbie)
    build-depends: HerbiePlugin >= 0.1 && < 0.2
    cpp-options: -DHERBIE
    ghc-options: -fplugin=Herbie

  exposed-modules:
    Data.Approximate
    Data.Approximate.Type
    Data.Approximate.Mass
    Data.Approximate.Numerics

  if impl(ghc >= 7.4 && < 7.6)
    build-depends: ghc-prim

  c-sources: cbits/fast.c
  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src
  default-language: Haskell2010
